fixed issues in host.py
Signed-off-by: sunilkumarn417 <sunnagar@redhat.com>

--- a/suites/pacific/cephadm/cephadm.yaml
+++ b/suites/pacific/cephadm/cephadm.yaml
@@ -548,7 +548,7 @@ tests:
           - set
           - mon
           - mon_allow_pool_delete
-          - true
+          - "true"
       destroy-cluster: false
       abort-on-fail: true
   - test:
