Adding tier1 cephfs operations
Signed-off-by: Amarnath K <amk@redhat.com>

--- a/conf/pacific/cephfs/tier_1_fs.yaml
+++ b/conf/pacific/cephfs/tier_1_fs.yaml
@@ -30,6 +30,7 @@ globals:
         role:
           - osd
           - nfs
+          - mds
         no-of-volumes: 4
         disk-size: 15
       node7:
@@ -39,4 +40,6 @@ globals:
       node8:
         role:
           - client
-
+      node9:
+        role:
+          - client
