--- a/suites/pacific/rbd/tier_1_rbd_mirror.yaml
+++ b/suites/pacific/rbd/tier_1_rbd_mirror.yaml
@@ -24,176 +24,176 @@
 #   (3) Runs IO using rbd bench
 #===============================================================================================
 tests:
-  - test:
-      name: setup install pre-requisistes
-      desc: Setup phase to deploy the required pre-requisites for running the tests.
-      module: install_prereq.py
-      abort-on-fail: true
-  - test:
-      abort-on-fail: true
-      clusters:
-        ceph-rbd1:
-          config:
-            verify_cluster_health: true
-            steps:
-              - config:
-                  command: bootstrap
-                  service: cephadm
-                  args:
-                    registry-url: registry.redhat.io
-                    mon-ip: node1
-                    orphan-initial-daemons: true
-                    skip-monitoring-stack: true
-              - config:
-                  command: add_hosts
-                  service: host
-                  args:
-                    attach_ip_address: true
-                    labels: apply-all-labels
-              - config:
-                  command: apply
-                  service: mgr
-                  args:
-                    placement:
-                      label: mgr
-              - config:
-                  command: apply
-                  service: mon
-                  args:
-                    placement:
-                      label: mon
-              - config:
-                  command: apply
-                  service: osd
-                  args:
-                    all-available-devices: true
-              - config:
-                  command: shell
-                  args: # arguments to ceph orch
-                    - "ceph fs volume create cephfs"
-              - config:
-                  command: apply
-                  service: mds
-                  base_cmd_args: # arguments to ceph orch
-                    verbose: true
-                  pos_args:
-                    - cephfs                        # name of the filesystem
-                  args:
-                    placement:
-                      nodes:
-                        - node4
-                        - node5
-              - config:
-                  command: apply
-                  service: rbd-mirror
-                  args:
-                    placement:
-                      nodes:
-                        - node6
-        ceph-rbd2:
-          config:
-            verify_cluster_health: true
-            steps:
-              - config:
-                  command: bootstrap
-                  service: cephadm
-                  args:
-                    registry-url: registry.redhat.io
-                    mon-ip: node1
-                    orphan-initial-daemons: true
-                    skip-monitoring-stack: true
-              - config:
-                  command: add_hosts
-                  service: host
-                  args:
-                    attach_ip_address: true
-                    labels: apply-all-labels
-              - config:
-                  command: apply
-                  service: mgr
-                  args:
-                    placement:
-                      label: mgr
-              - config:
-                  command: apply
-                  service: mon
-                  args:
-                    placement:
-                      label: mon
-              - config:
-                  command: apply
-                  service: osd
-                  args:
-                    all-available-devices: true
-              - config:
-                  command: shell
-                  args:                             # arguments to ceph orch
-                    - "ceph fs volume create cephfs"
-              - config:
-                  command: apply
-                  service: mds
-                  base_cmd_args:                    # arguments to ceph orch
-                    verbose: true
-                  pos_args:
-                    - cephfs                        # name of the filesystem
-                  args:
-                    placement:
-                      nodes:
-                        - node4
-                        - node5
-              - config:
-                  command: apply
-                  service: rbd-mirror
-                  args:
-                    placement:
-                      nodes:
-                        - node6
-      desc: RBD Mirror cluster deployment using cephadm
-      destroy-clster: false
-      module: test_cephadm.py
-      name: deploy cluster
-  - test:
-        abort-on-fail: true
-        clusters:
-          ceph-rbd1:
-            config:
-              command: add
-              id: client.1
-              node: node2
-              install_packages:
-                - ceph-common
-              copy_admin_keyring: true
-          ceph-rbd2:
-            config:
-                command: add
-                id: client.1
-                node: node2
-                install_packages:
-                    - ceph-common
-                copy_admin_keyring: true
-        desc: Configure the Cephfs client system 1
-        destroy-cluster: false
-        module: test_client.py
-        name: configure client
-  - test:
-      abort-on-fail: true
-      clusters:
-        ceph-rbd1:
-          config:
-            cephadm: true
-            commands:
-              - "ceph config set mon mon_allow_pool_delete true"
-        ceph-rbd2:
-          config:
-            cephadm: true
-            commands:
-              - "ceph config set mon mon_allow_pool_delete true"
-      desc: Enable mon_allow_pool_delete to True for deleting the pools
-      module: exec.py
-      name: configure mon_allow_pool_delete to True
+#  - test:
+#      name: setup install pre-requisistes
+#      desc: Setup phase to deploy the required pre-requisites for running the tests.
+#      module: install_prereq.py
+#      abort-on-fail: true
+#  - test:
+#      abort-on-fail: true
+#      clusters:
+#        ceph-rbd1:
+#          config:
+#            verify_cluster_health: true
+#            steps:
+#              - config:
+#                  command: bootstrap
+#                  service: cephadm
+#                  args:
+#                    registry-url: registry.redhat.io
+#                    mon-ip: node1
+#                    orphan-initial-daemons: true
+#                    skip-monitoring-stack: true
+#              - config:
+#                  command: add_hosts
+#                  service: host
+#                  args:
+#                    attach_ip_address: true
+#                    labels: apply-all-labels
+#              - config:
+#                  command: apply
+#                  service: mgr
+#                  args:
+#                    placement:
+#                      label: mgr
+#              - config:
+#                  command: apply
+#                  service: mon
+#                  args:
+#                    placement:
+#                      label: mon
+#              - config:
+#                  command: apply
+#                  service: osd
+#                  args:
+#                    all-available-devices: true
+#              - config:
+#                  command: shell
+#                  args: # arguments to ceph orch
+#                    - "ceph fs volume create cephfs"
+#              - config:
+#                  command: apply
+#                  service: mds
+#                  base_cmd_args: # arguments to ceph orch
+#                    verbose: true
+#                  pos_args:
+#                    - cephfs                        # name of the filesystem
+#                  args:
+#                    placement:
+#                      nodes:
+#                        - node4
+#                        - node5
+#              - config:
+#                  command: apply
+#                  service: rbd-mirror
+#                  args:
+#                    placement:
+#                      nodes:
+#                        - node6
+#        ceph-rbd2:
+#          config:
+#            verify_cluster_health: true
+#            steps:
+#              - config:
+#                  command: bootstrap
+#                  service: cephadm
+#                  args:
+#                    registry-url: registry.redhat.io
+#                    mon-ip: node1
+#                    orphan-initial-daemons: true
+#                    skip-monitoring-stack: true
+#              - config:
+#                  command: add_hosts
+#                  service: host
+#                  args:
+#                    attach_ip_address: true
+#                    labels: apply-all-labels
+#              - config:
+#                  command: apply
+#                  service: mgr
+#                  args:
+#                    placement:
+#                      label: mgr
+#              - config:
+#                  command: apply
+#                  service: mon
+#                  args:
+#                    placement:
+#                      label: mon
+#              - config:
+#                  command: apply
+#                  service: osd
+#                  args:
+#                    all-available-devices: true
+#              - config:
+#                  command: shell
+#                  args:                             # arguments to ceph orch
+#                    - "ceph fs volume create cephfs"
+#              - config:
+#                  command: apply
+#                  service: mds
+#                  base_cmd_args:                    # arguments to ceph orch
+#                    verbose: true
+#                  pos_args:
+#                    - cephfs                        # name of the filesystem
+#                  args:
+#                    placement:
+#                      nodes:
+#                        - node4
+#                        - node5
+#              - config:
+#                  command: apply
+#                  service: rbd-mirror
+#                  args:
+#                    placement:
+#                      nodes:
+#                        - node6
+#      desc: RBD Mirror cluster deployment using cephadm
+#      destroy-clster: false
+#      module: test_cephadm.py
+#      name: deploy cluster
+#  - test:
+#        abort-on-fail: true
+#        clusters:
+#          ceph-rbd1:
+#            config:
+#              command: add
+#              id: client.1
+#              node: node2
+#              install_packages:
+#                - ceph-common
+#              copy_admin_keyring: true
+#          ceph-rbd2:
+#            config:
+#                command: add
+#                id: client.1
+#                node: node2
+#                install_packages:
+#                    - ceph-common
+#                copy_admin_keyring: true
+#        desc: Configure the Cephfs client system 1
+#        destroy-cluster: false
+#        module: test_client.py
+#        name: configure client
+#  - test:
+#      abort-on-fail: true
+#      clusters:
+#        ceph-rbd1:
+#          config:
+#            cephadm: true
+#            commands:
+#              - "ceph config set mon mon_allow_pool_delete true"
+#        ceph-rbd2:
+#          config:
+#            cephadm: true
+#            commands:
+#              - "ceph config set mon mon_allow_pool_delete true"
+#      desc: Enable mon_allow_pool_delete to True for deleting the pools
+#      module: exec.py
+#      name: configure mon_allow_pool_delete to True
   - test:
       name: test_rbd_mirror
-      module: test_rbd_mirror.py
+      module: test_rbd_mirror_image.py
       clusters:
         ceph-rbd1:
           config:
